--- a/src/main/resources/templates/huesped/form/Registro.html
+++ b/src/main/resources/templates/huesped/form/Registro.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Formulario -->
-    <form th:action="@{/huesped/save}" th:object="${huesped}" method="post" class="needs-validation mx-5" novalidate>
+    <form th:action="@{/huesped/new}" th:object="${huesped}" method="post" class="needs-validation mx-5" novalidate>
       <div class="row g-4">
 
         <!-- Columna izquierda -->
@@ -63,7 +63,7 @@
 
           <div class="mb-3">
             <label class="form-label">Nacionalidad <span class="text-danger">*</span></label>
-            <input type="text" class="form-control" th:field="*{direccion.localidad.provincia.pais.nombre}" required>
+            <input type="text" class="form-control" th:field="*{direccion.nacionalidad}" required>
           </div>
         </div>
 
