--- a/src/main/resources/templates/huesped/form/Registro.html
+++ b/src/main/resources/templates/huesped/form/Registro.html
@@ -135,6 +135,17 @@
   </div>
 
     <div th:replace="fragments/Base :: scripts"></div>
+
+      <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      document.querySelectorAll('input[type="text"], input[type="email"], textarea')
+        .forEach(input => {
+          input.addEventListener("input", function() {
+            this.value = this.value.toUpperCase();
+          });
+        });
+    });
+  </script>
 </body>
 
 </html>
