--- a/src/main/resources/templates/huesped/huesped-duplicado.html
+++ b/src/main/resources/templates/huesped/huesped-duplicado.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+  <head th:replace="fragments/Base :: head('huesped-duplicado')"></head>
 <head>
   <meta charset="UTF-8">
   <title>Duplicado de Huésped</title>
