--- a/src/main/resources/templates/huesped/index.html
+++ b/src/main/resources/templates/huesped/index.html
@@ -16,6 +16,8 @@
         <p th:text="${successMessage}">Success Message</p>
     </div>
 
+      <a href="/huespedes/nuevo"><button>DAR ALTA HUESPED</button></a>
+
   </div>
 
     <div th:replace="fragments/Base :: scripts"></div>
