--- a/src/main/resources/templates/huesped/huesped-confirmacion.html
+++ b/src/main/resources/templates/huesped/huesped-confirmacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+  <head th:replace="fragments/Base :: head('confirmacion')"></head>
 <head>
   <meta charset="UTF-8">
   <title>Huésped registrado</title>
@@ -8,8 +9,8 @@
   <div style="text-align:center;">
     <h2 th:text="${mensaje}"></h2>
     <br>
-    <a href="/huespedes/nuevo"><button>Sí</button></a>
-    <a href="/"><button>No</button></a>
+    <a href="/huespedes/nuevo"><button>SI</button></a>
+    <a href="/huespedes"><button>NO</button></a>
   </div>
 </body>
 </html>
