CU04-SIN-PROBAR-SI-EJECUTA

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,12 @@
 
       <a href="/huespedes/nuevo"><button>DAR ALTA HUESPED</button></a>
 
+
+     <a href="/reserva/nueva"><button>NUEVA RESERVA</button></a>
+
+
   </div>
+
 
     <div th:replace="fragments/Base :: scripts"></div>
 </body>
