--- a/src/main/resources/templates/huesped/huesped-form.html
+++ b/src/main/resources/templates/huesped/huesped-form.html
@@ -99,7 +99,7 @@
         <input type="text" th:field="*{direccion.localidad.nombre}" required>
 
         <label>Código Postal <span class="req">*</span></label>
-        <input type="text" th:field="*{direccion.localidad.codigo_postal}" required>
+        <input type="text" th:field="*{direccion.localidad.codigoPostal}" required>
 
         <label>Provincia <span class="req">*</span></label>
         <input type="text" th:field="*{direccion.localidad.provincia.nombre}" required>
