--- a/src/main/resources/templates/emergentes/exito.html
+++ b/src/main/resources/templates/emergentes/exito.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <div class="caja">
-    <h2 th:text="${mensaje}"></h2>
+   <h2 th:text="${titulo}"></h2>
+<p th:text="${mensaje}"></p>
 
     <div class="botones">
         <a th:href="${accionAceptar}"><button>SI</button></a>
